Move certs into env instead of state
This will mean that commiting to the state wont be needed after up except for env.sh changes

--- a/2-pipeline-for-cf-deployment/cf-deployment-pipeline.yml
+++ b/2-pipeline-for-cf-deployment/cf-deployment-pipeline.yml
@@ -71,6 +71,8 @@ jobs:
       passed: [update-bosh]
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+    params:
+      INFRASTRUCTURE: aws
 - name: update-cf
   serial_groups: [bosh-cf]
   public: true
