Remove unneeded opsfile
Deployment works fine without this

--- a/2-pipeline-for-cf-deployment/cf-deployment-pipeline.yml
+++ b/2-pipeline-for-cf-deployment/cf-deployment-pipeline.yml
@@ -95,7 +95,7 @@ jobs:
       vars-store: vars-store
     params:
       SYSTEM_DOMAIN: {{system_domain}}
-      OPS_FILES: "operations/aws.yml operations/change-logging-port-for-aws-elb.yml operations/disable-router-tls-termination.yml operations/scale-to-one-az.yml"
+      OPS_FILES: "operations/aws.yml operations/change-logging-port-for-aws-elb.yml operations/scale-to-one-az.yml"
     ensure:
       put: vars-store
       params:
