Trigger app build on git repo change

--- a/3-pipeline-for-basic-cf-app/cf-app-pipeline.yml
+++ b/3-pipeline-for-basic-cf-app/cf-app-pipeline.yml
@@ -23,6 +23,7 @@ jobs:
   serial: true
   plan:
   - get: my-app-git-resource
+    trigger: true
   - task: build
     ### move to file: task.yml ###
     config:
