--- a/4-pipeline-for-bosh-create-env/pipelines/tasks/deploy-director/task.yml
+++ b/4-pipeline-for-bosh-create-env/pipelines/tasks/deploy-director/task.yml
@@ -18,6 +18,6 @@ run:
   path: pipeline-tasks/deploy-director/task
 
 params:
-  STATE_DIR:
-  BOSH_DEPLOYMENT_DIR:
-  PIPELINE_DIR:
+  STATE_DIR: ~
+  BOSH_DEPLOYMENT_DIR: ~
+  PIPELINE_DIR: ~
