--- a/4-pipeline-for-bosh-create-env/pipelines/tasks/deploy-director/task.yml
+++ b/4-pipeline-for-bosh-create-env/pipelines/tasks/deploy-director/task.yml
@@ -4,8 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: bosh/cli
-    tag: go-1.8
+    repository: concourse/bosh-cli
+    tag: latest
 
 inputs:
 - name: my-pipeline
