--- a/4-pipeline-for-bosh-create-env/pipelines/bosh-create-env/pipeline.yml
+++ b/4-pipeline-for-bosh-create-env/pipelines/bosh-create-env/pipeline.yml
@@ -15,7 +15,7 @@ resources:
 - name: my-pipeline
   type: git
   source:
-    branch: master
+    branch: feature/micahs-pipeline
     uri: {{pipeline_repo_url}}
 - name: cf-deployment
   type: git
