added custom ops files env variables

--- a/2-pipeline-for-bosh-cf-deployment/cf-deployment-pipeline.yml
+++ b/2-pipeline-for-bosh-cf-deployment/cf-deployment-pipeline.yml
@@ -26,10 +26,9 @@ resources:
   type: git
   source:
     branch: master
-    uri: {{state_repo_url}}
-    private_key: {{state_repo_private_key}}
+    uri: {{custom_ops_files_repo_url}}
     paths:
-    - operations
+    - {{custom_ops_files_paths}}
 - name: cf-deployment
   type: git
   source:
