remove custome ops-files paths

--- a/2-pipeline-for-bosh-cf-deployment/cf-deployment-pipeline.yml
+++ b/2-pipeline-for-bosh-cf-deployment/cf-deployment-pipeline.yml
@@ -28,7 +28,7 @@ resources:
     branch: master
     uri: {{custom_ops_files_repo_url}}
     paths:
-    - {{custom_ops_files_paths}}
+    - operations
 - name: cf-deployment
   type: git
   source:
